Try to add shadcn

--- a/src/recipes/beef-bourguignon.mdx
+++ b/src/recipes/beef-bourguignon.mdx
@@ -8,9 +8,9 @@ heroImage: "/beef-bourguignon.jpeg"
 
 from: https://www.foodnetwork.com/recipes/ina-garten/beef-bourguignon-recipe-1942045
 
-**Yield: 6 Servings<br>
-Prep: 30 min<br>
-Cook: 1 hr 15 min<br>
+**Yield: 6 Servings<br />
+Prep: 30 min<br />
+Cook: 1 hr 15 min<br />
 Total: 1 hr 45 min**
 
 ## Ingredients
