--- a/src/recipes/cuban-mojo-chicken.mdx
+++ b/src/recipes/cuban-mojo-chicken.mdx
@@ -1,3 +1,11 @@
+---
+layout: "../../layouts/PostLayout.astro"
+title: "Cuban Mojo Chicken"
+description: "A new dish, untested"
+pubDate: "Feb 1 2023"
+heroImage: "/clay-pot-rice.jpeg"
+---
+
 # Cuban Mojo Chicken
 
 from: https://easychickenrecipes.com/cuban-mojo-chicken-recipe/#recipe
