--- a/src/recipes/hello-world2.mdx
+++ b/src/recipes/hello-world2.mdx
@@ -1,6 +1,9 @@
 ---
-title: 'Hello world MDX'
-summary: 'This is my first MDX post!'
+layout: "../../layouts/PostLayout.astro"
+title: "Hello world MDX"
+pubDate: "Feb 1 2023"
+description: "This is my first MDX post!"
+heroImage: "/clay-pot-rice.jpeg"
 ---
 
 # Hello world
