--- a/src/recipes/pickled-red-onions.mdx
+++ b/src/recipes/pickled-red-onions.mdx
@@ -8,9 +8,9 @@ heroImage: "/pickled-red-onions.webp"
 
 ## Info
 
-**prep time:** 5 MINS<br>
-**cook time:** 30 MINS<br>
-**total time:** 35 MINS<br>
+**prep time:** 5 MINS<br />
+**cook time:** 30 MINS<br />
+**total time:** 35 MINS<br />
 **yield:** 2 CUPS
 
 ## Ingredients
