--- a/src/recipes/classic-chili.mdx
+++ b/src/recipes/classic-chili.mdx
@@ -10,28 +10,28 @@ from: https://www.thewholesomedish.com/the-best-classic-chili/
 
 ## Info
 
-**prep time:** 5 MINS<br>
-**cook time:** 25 MINS<br>
-**total time:** 30 MINS<br>
+**prep time:** 5 MINS<br />
+**cook time:** 25 MINS<br />
+**total time:** 30 MINS<br />
 **yield:** 6 servings
 
 ## Ingredients
 
--   1 tablespoon olive oil
--   1 medium yellow onion -diced
--   1 pound 90% lean ground beef
--   2 1/2 tablespoons chili powder
--   2 tablespoons ground cumin
--   2 tablespoons granulated sugar
--   2 tablespoons tomato paste
--   1 tablespoon garlic powder
--   1 1/2 teaspoons salt
--   1/2 teaspoon ground black pepper
--   1/4 teaspoon ground cayenne pepper\* -optional
--   1 1/2 cups beef broth
--   1 (15 oz.) can petite diced tomatoes
--   1 (16 oz.) can red kidney beans, drained and rinsed
--   1 (8 oz.) can tomato sauce
+- 1 tablespoon olive oil
+- 1 medium yellow onion -diced
+- 1 pound 90% lean ground beef
+- 2 1/2 tablespoons chili powder
+- 2 tablespoons ground cumin
+- 2 tablespoons granulated sugar
+- 2 tablespoons tomato paste
+- 1 tablespoon garlic powder
+- 1 1/2 teaspoons salt
+- 1/2 teaspoon ground black pepper
+- 1/4 teaspoon ground cayenne pepper\* -optional
+- 1 1/2 cups beef broth
+- 1 (15 oz.) can petite diced tomatoes
+- 1 (16 oz.) can red kidney beans, drained and rinsed
+- 1 (8 oz.) can tomato sauce
 
 ## Directions
 
